--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>シンプルなページ</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Countryballs at War</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #f0f0f0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    canvas {
+      border: 2px solid black;
+      background-color: white;
+    }
+  </style>
 </head>
 <body>
-  <h1>こんにちは、世界！</h1>
-  <p>これはテスト用のHTMLページです。</p>
+  <canvas id="gameCanvas" width="800" height="600"></canvas>
+  <script src="main.js"></script>
 </body>
 </html>
